# TimeSeries_Model_project

./: README.md  pyproject.toml
02_GasRisk_AI/: AGENTS.md  README.md
02_GasRisk_AI/Data_docs/: official_data_list.md
02_GasRisk_AI/Docs/: GasRisk_AI_TASK.md  data_inventory.md
02_GasRisk_AI/Work_logs/: 2026_06_01.md
Algae-early-warning-OSS/: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  app.py  conftest.py  pyproject.toml
Algae-early-warning-OSS/docs/PRD/: PRD.md
Algae-early-warning-OSS/models/: algae_lgbm.txt  algae_lgbm_ge10000.txt  model_card.json  stage_model_card.json
Algae-early-warning-OSS/notebooks/: eda_algae.ipynb  results.ipynb
Algae-early-warning-OSS/reference/: algae_site_coords.csv  algae_sites.csv  kma_stations.csv  site_station_map.csv
Algae-early-warning-OSS/reports/: f2_audit.md  license_report.md  model_dl_benchmark.md  model_eval.md  model_multiclass.md  predictions_sample.csv  weather_ablation.md
Algae-early-warning-OSS/scripts/: build_site_coords.py  fetch_algae.py  fetch_weather.py
Algae-early-warning-OSS/src/: ablation.py  audit.py  benchmark_dl.py  deep.py  eda.py  features.py  forecast.py  loading.py  modeling.py  multiclass.py  reporting.py  target.py  validation.py
Algae-early-warning-OSS/tests/: test_deep.py  test_features.py  test_forecast.py  test_loading.py  test_multiclass.py  test_pipeline.py  test_target.py  test_validation.py
Battery_TimeSeries_Analysis/: README.md  pyproject.toml
GasRisk_AI/: .gitignore  README.md  pyproject.toml
Practice/: pyproject.toml
(+101 files in other folders)
