[project]
name = "timeseries-model-project"
version = "0.1.0"
description = "timeseries-model-project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2026.5.0",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn",
    "lightgbm",
    "timesfm[torch]",
    "chronos-forecasting",
    "neuralforecast",
    "matplotlib-inline>=0.2.2",
    "ipython>=9.14.1",
    "streamlit>=1.58.0",
    "watchdog>=6.0.0",
]
